--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/*css for information, policy ,terms, cookie, site=issues */
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f8f9fa;
@@ -10,6 +11,7 @@ body {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
+
 }
 
 h1 {
@@ -17,6 +19,13 @@ h1 {
     margin-bottom: 40px;
     font-size: 2.5em;
     font-weight: bold;
+}
+
+h2{
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 15px;
+    margin-top: 20px;
 }
 
 h3 {
@@ -85,6 +94,42 @@ h3 {
     height: 80px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+/*site isssues form */
+
+form {
+    margin-top: 20px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+}
+
+.btn-primary {
+    background-color: #e77d31;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-primary:hover {
+    background-color: #d46a1f;
 }
 
 /* Media Queries to make the website Mobile Responsiveness */
