--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -50,5 +50,5 @@ form {
 }
 
 .map-container path:hover {
-    fill: #f0f0f0; /* Highlight fill when hovered */
+    fill: #f0f0f0; /* Highlight fill when hovered test */
 }
